--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.6",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
     "@mui/material-nextjs": "^7.3.6",
     "next": "16.1.1",
     "react": "19.2.3",
